--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -136,4 +136,4 @@ other = "Skills"
 other = "Contacts"
 
 [qualifications]
-other = "Qualifications/Awards"
+other = "Qualifications / Awards / Grants"
